# IR-CodeSearchNet-BM25-CodeBERT

./: .gitignore  README.md  app.py  build_dense_index.py  dense_runtime.py  dense_utils.py  index.py  preprocessing.py  pyproject.toml  retrieve_bm25_codebert_rerank.py  retrieve_only_BM25.py  sanity_check.py
data/: download_CodeSearchNet.py
docs/: proposal.tex  report.tex
